# agentbox

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  agentbox-spec.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: agents.rs  attach.rs  down.rs  images.rs  init.rs  kill.rs  list.rs  manifest_cmd.rs  mod.rs  profile.rs  serve.rs  sync_cmd.rs  up.rs
core/: Cargo.toml
core/src/: auth.rs  config.rs  container.rs  engine.rs  lib.rs  manifest.rs  manifest_store.rs  notify.rs  profile.rs  provider.rs  sync.rs
core/src/agents/: claude_code.rs  manifest_agent.rs  mod.rs  opencode.rs
docs/: usage.md
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: main.rs
manifests/: claude-code.yaml  codex.yaml  hermes.yaml  opencode.yaml  pi.yaml
tui/: Cargo.toml
tui/src/: main.rs  wizard.rs
