[package]
name = "agentbox-core"
version.workspace = true
edition.workspace = true

[dependencies]
bollard = "0.18"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
keyring = { version = "3", features = ["async-secret-service", "async-io", "crypto-rust"] }
futures-util = "0.3"
tar = "0.4"
crossterm = "0.28"
async-trait = "0.1"
similar = "2"
tracing = "0.1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
