[package]
name = "agentbox-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "agentbox-tui"
path = "src/main.rs"

[dependencies]
agentbox-core = { path = "../core" }
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
