[package]
name = "agentbox-gui"
version = "0.1.0"
edition = "2021"

# This crate is NOT a workspace member — it requires system packages that may
# not be installed everywhere (libwebkit2gtk-4.1-dev on Linux).
# Build with:  cd gui/src-tauri && cargo run
# Or with Tauri CLI:  cargo install tauri-cli && cargo tauri dev

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "agentbox-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
agentbox-core = { path = "../../core" }
