[workspace]

[package]
name = "agentbox-gui"
version = "0.1.0"
edition = "2021"

# This crate is NOT a workspace member — it requires system packages that may
# not be installed everywhere (libwebkit2gtk-4.1-dev on Linux).
# Build with:  cd gui/src-tauri && cargo run
# Or with Tauri CLI:  cargo install tauri-cli && cargo tauri dev

[[bin]]
name = "agentbox-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
agentbox-core = { path = "../../core" }
serde_yaml = "0.9"

[patch.crates-io]
# brotli 8.0.3 from crates.io declares alloc-no-stdlib "2.0", but alloc-stdlib 0.2.3
# upgraded to alloc-no-stdlib "3.0". Cargo resolves two incompatible versions of
# alloc-no-stdlib, so StandardAlloc doesn't satisfy brotli's Allocator<T> bounds (E0277).
# This local copy bumps the alloc-no-stdlib dep to "3.0" so only one version is in the graph.
brotli = { path = "../brotli-patch" }

